Recoded the ip saving. Using a json file, each username has allowed ips making it more secure